--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="./Styles/styles.css">
+    <link rel="stylesheet" href="./Styles/footer.css">
 
     <script src="https://kit.fontawesome.com/2a697e5a20.js" crossorigin="anonymous"></script>
     <title>Document</title>
@@ -15,19 +16,54 @@
         <div class="navigation">
         <nav>
             <ul>
-                <li>Home</li>
-                <li>Gallery</li>
-                <li>About</li>
-                <li>Contact</li>
+                <li><a href="./Html/home.html">Home</li></a>
+                <li><a href="./Html/gallary.html">Gallery</li></a>
+                <li><a href="./Html/about.html">About</li></a>
+                <li><a href="./Html/contacts.html">Contact</li></a>
             </ul>
         </nav>
     </div>
+    </div>
             <div class="user-details">
                 <i id="user-avater"class="fa-solid fa-user"></i><br><br>
-            <h3>User 636500</h3><br><br>
+                    <h3><a href="./">User 636500</a></h3><br><br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt omnis alias itaque pariatur sed debitis dicta veniam quo, eum iste necessitatibus autem provident dolor. Velit nulla praesentium assumenda inventore eligendi.</p>
 
         </div>
-    </div>
+
+
+        <div class="footer">
+            <div class="column-1">
+                <h3>Connect With Me</h3>
+                <div class="logos-container">
+                <a href="mailto:lbibek2004@gmail.com?subject=From Github: I want to connect" target="_blank">
+                    <i class="fa-solid fa-envelope"  id="logos"></i>
+                </a>
+                <a href="https://www.facebook.com/officialsexypotato" target="_blank">
+                    <i class="fa-brands fa-facebook" id="logos"></i>
+                </a>
+                <a href="https://github.com/lbibek2004" target="_blank">
+                    <i class="fa-brands fa-github" id="logos"></i>
+                </a>
+                <a href="https://www.instagram.com/officialsexypotato" target="_blank">
+                    <i class="fa-brands fa-instagram" id="logos"></i>
+                </a>
+            </div>
+        </div>
+            <div class="column-2">
+                <h3>Send Me a Message</h3>
+                <form>
+                    <input type="text" placeholder="Your Message Here">
+                    <button type="submit" onclick="displayPopup()">Send</button>
+                </form>
+            </div>
+            <div class="column-3">
+                <h3>Contact Me</h3>
+                <a href="https://maps.app.goo.gl/fFf9JRTZutnBEM6D6" target="_blank"><p class="my-contact"><strong>Dhunibeshi-5, Dhadng<br>44100<br>Nepal<br></strong></p>
+                </a>
+                <a href="tel:+9779860832684"><p class="my-contact">(+977) 986-0832684</p></a>
+            </div>
+            <p class="copyright">This webpage was designed by Bibek Luitel</p>
+        </div>
 </body>
 </html>
